--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       to reduce the size of the font and to increase the size of <br>
       the font keep your left and right wrist far from each other.
       Move your nose to move the text 
-    <span><h3>Font-size: <p id="height"></p></h3></span</span>
+    <span><h3>Font-size:<p id="height"></span><span></p></h3></span</span>
 </h3>
   <br>
   <br>
