--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <center>
-  <h3 class="btn btn-info header">Changing width, height and postion of a square in Realtime
+  <h3 class="btn btn-info header">Changing Font-Size and postion of a Text in Realtime
 
     <br>
     <span class="btn-default note">NOTE - Get your left and right wrist closer 
